@@ -1,9 +1,15 @@
 2008-04-07  Eric B. Weddington  <eric.weddington@atmel.com>
 
+	* include/avr/iom328p.h: Fix SPM_PAGESIZE.
+	* include/avr/iom88p.h: Ditto.
+	* include/avr/iom48p.h: Ditto.
+
+2008-04-07  Eric B. Weddington  <eric.weddington@atmel.com>
+
 	Fix for bug #22870.
-        * include/avr/wdt.h: Add support for ATmega164P, ATmega324P, ATmega644P.
+	* include/avr/wdt.h: Add support for ATmega164P, ATmega324P, ATmega644P.
 	Rearrange condition list to alphabetical order.
-        * NEWS: Add to fixed bug list.
+	* NEWS: Add to fixed bug list.
 
 2008-04-05  Dmitry Xmelkov  <dmix@gmail.ru>
 
